<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.rajendarreddyj</groupId>
    <artifactId>development-java14-features</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>development-java14-features</name>
    <properties>
        <!-- Java version -->
        <java.version>14</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>14</source>
                    <target>14</target>
                    <compilerArgs>
                        <arg>-Xlint:preview</arg>
                        <arg>--warning-mode=all</arg>
                        <arg>--enable-preview</arg>
                        <arg>--add-modules jdk.incubator.jpackage</arg>
                        <arg>--add-modules jdk.incubator.foreign</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <organization>
        <url>https://rajendarreddyj.github.io/</url>
        <name>rajendarreddyj</name>
    </organization>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://raw.githubusercontent.com/rajendarreddyj/development-java14-features/master/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <email>rajendarreddyj@gmail.com</email>
            <name>Rajendarreddy Jagapathi</name>
            <url>https://github.com/rajendarreddyj</url>
            <id>rajendarreddyj</id>
        </developer>
    </developers>
    <scm>
        <url>https://github.com/rajendarreddyj/development-java14-features.git</url>
        <developerConnection>scm:git:git@github.com:rajendarreddyj/development-java14-features.git</developerConnection>
        <tag>HEAD</tag>
        <connection>scm:git:git://github.com/rajendarreddyj/development-java14-features.git</connection>
    </scm>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/rajendarreddyj/development-java14-features/issues</url>
    </issueManagement>
    <ciManagement>
        <url>https://travis-ci.org/rajendarreddyj/development-java14-features</url>
        <system>Travis</system>
    </ciManagement>
</project>